@@ -3709,6 +3709,7 @@ _pack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t * build_ptr, Buf buffer,
 			 uint16_t protocol_version)
 {
 	uint32_t count = NO_VAL;
+	uint16_t uint16_tmp;
 
 	if(protocol_version >= SLURM_2_2_PROTOCOL_VERSION) {
 		pack_time(build_ptr->last_update, buffer);
@@ -3729,7 +3730,6 @@ _pack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t * build_ptr, Buf buffer,
 		pack16(build_ptr->batch_start_timeout, buffer);
 		pack_time(build_ptr->boot_time, buffer);
 
-		pack16(build_ptr->cache_groups, buffer);
 		packstr(build_ptr->checkpoint_type, buffer);
 		packstr(build_ptr->cluster_name, buffer);
 		pack16(build_ptr->complete_wait, buffer);
@@ -3749,6 +3749,7 @@ _pack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t * build_ptr, Buf buffer,
 		pack32(build_ptr->first_job_id, buffer);
 
 		pack16(build_ptr->get_env_timeout, buffer);
+		pack16(build_ptr->group_info, buffer);
 
 		pack32(build_ptr->hash_val, buffer);
 
@@ -3921,7 +3922,11 @@ _pack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t * build_ptr, Buf buffer,
 		pack16(build_ptr->batch_start_timeout, buffer);
 		pack_time(build_ptr->boot_time, buffer);
 
-		pack16(build_ptr->cache_groups, buffer);
+		if (build_ptr->group_info & GROUP_CACHE)
+			uint16_tmp = 1;
+		else
+			uint16_tmp = 0;
+		pack16(uint16_tmp, buffer);	/* cache_groups equivalent */
 		packstr(build_ptr->checkpoint_type, buffer);
 		packstr(build_ptr->cluster_name, buffer);
 		pack16(build_ptr->complete_wait, buffer);
@@ -4099,6 +4104,7 @@ _unpack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t **build_buffer_ptr,
 {
 	uint32_t count = NO_VAL;
 	uint32_t uint32_tmp;
+	uint16_t uint16_tmp;
 	slurm_ctl_conf_info_msg_t *build_ptr;
 
 	/* alloc memory for structure */
@@ -4139,7 +4145,6 @@ _unpack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t **build_buffer_ptr,
 		safe_unpack16(&build_ptr->batch_start_timeout, buffer);
 		safe_unpack_time(&build_ptr->boot_time, buffer);
 
-		safe_unpack16(&build_ptr->cache_groups, buffer);
 		safe_unpackstr_xmalloc(&build_ptr->checkpoint_type,
 				       &uint32_tmp, buffer);
 		safe_unpackstr_xmalloc(&build_ptr->cluster_name,
@@ -4166,6 +4171,7 @@ _unpack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t **build_buffer_ptr,
 		safe_unpack32(&build_ptr->first_job_id, buffer);
 
 		safe_unpack16(&build_ptr->get_env_timeout, buffer);
+		safe_unpack16(&build_ptr->group_info, buffer);
 
 		safe_unpack32(&build_ptr->hash_val, buffer);
 
@@ -4404,7 +4410,11 @@ _unpack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t **build_buffer_ptr,
 		safe_unpack16(&build_ptr->batch_start_timeout, buffer);
 		safe_unpack_time(&build_ptr->boot_time, buffer);
 
-		safe_unpack16(&build_ptr->cache_groups, buffer);
+		safe_unpack16(&uint16_tmp, buffer);
+		build_ptr->group_info = 600;
+		if (uint16_tmp)
+			build_ptr->group_info |= GROUP_CACHE;
+
 		safe_unpackstr_xmalloc(&build_ptr->checkpoint_type,
 				       &uint32_tmp, buffer);
 		safe_unpackstr_xmalloc(&build_ptr->cluster_name,
